--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-math = "*"
-numpy = "*"
-itertools = "*"
-time = "*"
-pickle = "*"
-datetime = "*"
-torch = "*"
-torchvision = "*"
+math=="*"
+numpy=="*"
+itertools=="*"
+time=="*"
+pickle=="*"
+datetime=="*"
+torch=="*"
+torchvision=="*"
