--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-math=="*"
-numpy=="*"
-itertools=="*"
-time=="*"
-pickle=="*"
-datetime=="*"
-torch=="*"
-torchvision=="*"
+numpy
+torch
+torchvision
